--- a/templates/countyDemo.html
+++ b/templates/countyDemo.html
@@ -3,7 +3,7 @@
   <body>
     <h1>The Select Element</h1>
     <p>The select element defines a drop-down list:</p>
-    <form action="/action_page.php">
+    <form action="/fact">
       <select name= "state">
         {{ options }}
       </select>
